[Bug] Fix icon alignment in buttons (#360)
* Fix icon alignment in buttons

* Fix ordering

--- a/app/javascript/dashboard/assets/scss/_layout.scss
+++ b/app/javascript/dashboard/assets/scss/_layout.scss
@@ -41,11 +41,6 @@ body {
 .content-box {
   overflow: scroll;
   @include padding($space-normal);
-  .btn-fixed-right-top {
-    position: fixed;
-    top: $space-small;
-    right: $space-small;
-  }
 }
 
 .back-button {
